ui: fix location flag alignment in user profile

--- a/ui/user/css/_profile.scss
+++ b/ui/user/css/_profile.scss
@@ -32,10 +32,14 @@
     overflow: hidden;
   }
 
-  .flag img {
-    vertical-align: text-bottom;
-    margin: 0 0.3em;
-    aspect-ratio: 1;
+  .location {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+
+    img {
+      aspect-ratio: 1;
+    }
   }
 
   .user-infos {
@@ -44,7 +48,6 @@
     flex: 1 1 auto;
     padding: 0.8em;
     overflow: auto;
-
     unicode-bidi: plaintext;
     text-align: start;
 
